@@ -1449,10 +1449,10 @@ UIElement::PostRender (List *ctx, Region *region, bool skip_children)
 			r.Draw (cr);
 			cairo_clip (cr);
 
-			if (!effect->ClipAndComposite (cr, src,
-						       NULL,
-						       r.x, r.y,
-						       r.width, r.height))
+			if (!effect->Render (cr, src,
+					     NULL,
+					     r.x, r.y,
+					     r.width, r.height))
 				g_warning ("UIElement::PostRender failed to apply pixel effect.");
 
 			cairo_restore (cr);
@@ -1486,10 +1486,10 @@ UIElement::PostRender (List *ctx, Region *region, bool skip_children)
 			GetGlobalBounds ().RoundOut ().Draw (cr);
 			cairo_clip (cr);
 
-			if (!effect->ClipAndComposite (cr, src,
-						       render_projection,
-						       r.x, r.y,
-						       r.width, r.height))
+			if (!effect->Render (cr, src,
+					     render_projection,
+					     r.x, r.y,
+					     r.width, r.height))
 				g_warning ("UIElement::PostRender failed to apply perspective transformation.");
 
 			cairo_restore (cr);
